fixed styling on bookpage so covers are all the same size

--- a/public/css/bookpage.css
+++ b/public/css/bookpage.css
@@ -12,4 +12,7 @@ body {
 	font-style: italic;
 }
 
-.
+.coverImage {
+	width: 300px;
+	height: 500px;
+}
